tests/rosetta/transpiler/C/church-numerals-1.c
// Generated by Mochi 0.10.32 on 2025-08-04 20:25 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

typedef struct AddClosure AddClosure;
typedef struct AddClosure_callClosure AddClosure_callClosure;
typedef struct MulClosure MulClosure;
typedef struct MulClosure_callClosure MulClosure_callClosure;
typedef struct SuccClosure SuccClosure;
typedef struct SuccClosure_callClosure SuccClosure_callClosure;
typedef struct ZeroClosure ZeroClosure;

struct AddClosure {
};

struct AddClosure_callClosure {
};

struct MulClosure {
};

struct MulClosure_callClosure {
};

struct SuccClosure {
};

struct SuccClosure_callClosure {
};

struct ZeroClosure {
};

int(*)(int)(*)(int(*)(int)) z = 0;
SuccClosure three;
SuccClosure four;

ZeroClosure zero(int(*f)(int));
int ZeroClosure_call(int x);
SuccClosure succ(int(*c)(int));
int SuccClosure_callClosure_call(int x);
SuccClosure_callClosure SuccClosure_call(int(*f)(int));
AddClosure add(int(*c)(int), int(*d)(int));
int AddClosure_callClosure_call(int x);
AddClosure_callClosure AddClosure_call(int(*f)(int));
MulClosure mul(int(*c)(int), int(*d)(int));
int MulClosure_callClosure_call(int x);
MulClosure_callClosure MulClosure_call(int(*f)(int));
int(*)(int)(*)(int(*)(int)) pow(int(*c)(int), int(*d)(int));
int incr(int i);
long long toInt(int(*c)(int));
int(*)(int)(*)(int(*)(int)) intToChurch(long long i);
int main(void);

ZeroClosure zero(int(*f)(int)) {
    return (ZeroClosure){};
}

int ZeroClosure_call(int x) {
    return x;
}

SuccClosure succ(int(*c)(int)) {
    return (SuccClosure){};
}

int SuccClosure_callClosure_call(int x) {
    return f(c(f));
}

SuccClosure_callClosure SuccClosure_call(int(*f)(int)) {
    return (SuccClosure_callClosure){};
}

AddClosure add(int(*c)(int), int(*d)(int)) {
    return (AddClosure){};
}

int AddClosure_callClosure_call(int x) {
    return c(f);
}

AddClosure_callClosure AddClosure_call(int(*f)(int)) {
    return (AddClosure_callClosure){};
}

MulClosure mul(int(*c)(int), int(*d)(int)) {
    return (MulClosure){};
}

int MulClosure_callClosure_call(int x) {
    return c(d(f));
}

MulClosure_callClosure MulClosure_call(int(*f)(int)) {
    return (MulClosure_callClosure){};
}

int(*)(int)(*)(int(*)(int)) pow(int(*c)(int), int(*d)(int)) {
    long long di = toInt(d);
    int(*)(int)(*)(int(*)(int)) prod = c;
    long long i = 1LL;
    while (i < di) {
        prod = mul(prod, c);
        i = i + 1LL;
    }
    return prod;
}

int incr(int i) {
    return (int)(i) + 1LL;
}

long long toInt(int(*c)(int)) {
    return c(incr);
}

int(*)(int)(*)(int(*)(int)) intToChurch(long long i) {
    if (i == 0LL) {
        return zero;
    }
    return succ(intToChurch(i - 1LL));
}

int main(void) {
    {
        long long __start = _now();
        z = zero;
        three = succ(succ(succ(z)));
        four = succ(three);
        puts(str_concat("three        -> ", str_int(toInt(three))));
        puts(str_concat("four         -> ", str_int(toInt(four))));
        puts(str_concat("three + four -> ", str_int(toInt(add(three, four)))));
        puts(str_concat("three * four -> ", str_int(toInt(mul(three, four)))));
        puts(str_concat("three ^ four -> ", str_int(toInt(pow(three, four)))));
        puts(str_concat("four ^ three -> ", str_int(toInt(pow(four, three)))));
        puts(str_concat("5 -> five    -> ", str_int(toInt(intToChurch(5LL)))));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
